--- a/Movie_Review.ipynb
+++ b/Movie_Review.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Part One: Understanding the Background and Data"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -23,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part Two: Exploring Fandango Displayed Scores versus True User Ratings"
+    "## Part One: Exploring Fandango Displayed Scores VS True User Ratings"
    ]
   },
   {
@@ -928,7 +921,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part Three: Comparison of Fandango Ratings to Other Sites"
+    "## Part Two: Comparison of Fandango Ratings to Other Sites"
    ]
   },
   {
@@ -1254,9 +1247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Rotten Tomatoes\n",
-    "\n",
-    "Let's first take a look at Rotten Tomatoes."
+    "### Rotten Tomatoes"
    ]
   },
   {
@@ -1551,9 +1542,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MetaCritic\n",
-    "\n",
-    "Now let's take a quick look at the ratings from MetaCritic."
+    "## MetaCritic"
    ]
   },
   {
@@ -1595,9 +1584,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## IMBD\n",
-    "\n",
-    "Finally let's explore IMDB. Notice that both Metacritic and IMDB report back vote counts."
+    "## IMBD"
    ]
   },
   {
@@ -1785,9 +1772,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fandago Scores vs. All Sites\n",
-    "\n",
-    "Finally let's begin to explore whether or not Fandango artificially displays higher ratings than warranted to boost ticket sales."
+    "## Fandago Scores vs. All Sites"
    ]
   },
   {
@@ -2738,7 +2723,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
